# tap-ecbexchangerates

./: LICENSE  README.md  catalog.json  meltano.yml  pyproject.toml  test_config.json
tap_ecbexchangerates/: __init__.py  __main__.py  client.py  streams.py  tap.py
